--- a/public_html/cybersecurity.html
+++ b/public_html/cybersecurity.html
@@ -13,7 +13,6 @@
 
     <script src="script.js" type="text/javascript"></script>
         
-    <!-- favicon -->
     <link rel="icon" type="image/png" href="Gallery/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="Gallery/favicon/favicon.svg" />
     <link rel="shortcut icon" href="Gallery/favicon/favicon.ico" />
@@ -78,40 +77,45 @@
         </div>
     </section>
 
-    <section id="cybersecurity-services-section" class="main-section"> <div class="container mx-auto px-4"> <h2 class="section-heading">Our Cybersecurity Expertise</h2> <div class="max-w-4xl mx-auto text-content-block"> <p class="mb-6">
-                    In an increasingly interconnected world, cybersecurity is no longer an option—it's a necessity. Trifecta.Systems provides comprehensive cybersecurity services designed to safeguard your digital assets, protect sensitive data, and ensure business continuity against sophisticated cyberattacks.
+    <section id="cybersecurity-services-section" class="main-section">
+        <div class="container mx-auto px-4">
+            <h2 class="section-heading">Our Cybersecurity Expertise</h2>
+            <div class="max-w-4xl mx-auto text-content-block">
+                <p class="mb-6"> In an increasingly interconnected world, cybersecurity is no longer an option—it's a necessity. Trifecta.Systems provides comprehensive cybersecurity services designed to safeguard your digital assets, protect sensitive data, and ensure business continuity against sophisticated cyberattacks.
                 </p>
-                <p class="mb-6">
-                    Our approach combines cutting-edge technology with expert strategies to identify vulnerabilities, implement robust defenses, and respond effectively to security incidents. From risk assessments and compliance adherence to network security and employee training, we build a multi-layered defense tailored to your organization's unique threat landscape.
+                <p class="mb-6"> Our approach combines cutting-edge technology with expert strategies to identify vulnerabilities, implement robust defenses, and respond effectively to security incidents. From risk assessments and compliance adherence to network security and employee training, we build a multi-layered defense tailored to your organization's unique threat landscape.
                 </p>
-                <p>
-                    We empower you with peace of mind, knowing that your systems and data are secure, allowing you to focus on innovation and growth without the constant worry of cyber threats.
+                <p> We empower you with peace of mind, knowing that your systems and data are secure, allowing you to focus on innovation and growth without the constant worry of cyber threats.
                 </p>
             </div>
         </div>
     </section>
 
-    <section id="cybersecurity-services-list" class="main-section"> <div class="container mx-auto px-4"> <h2 class="section-heading">Our Core Cybersecurity Services</h2> <div class="max-w-4xl mx-auto text-content-block"> <ul class="list-disc pl-8 space-y-4">
+    <section id="cybersecurity-services-list" class="main-section">
+        <div class="container mx-auto px-4">
+            <h2 class="section-heading">Our Core Cybersecurity Services</h2>
+            <div class="max-w-4xl mx-auto">
+                <ul class="list-disc pl-8 space-y-4 text-left">
                     <li>
-                        <strong class="text-white">Vulnerability Assessments & Penetration Testing:</strong> Proactive identification of weaknesses in your systems, applications, and networks to prevent breaches before they occur.
+                        <strong class="">Vulnerability Assessments & Penetration Testing:</strong> Proactive identification of weaknesses in your systems, applications, and networks to prevent breaches before they occur.
                     </li>
                     <li>
-                        <strong class="text-white">Managed Security Services:</strong> Continuous monitoring, threat detection, and rapid response to security incidents, ensuring 24/7 protection.
+                        <strong class="">Managed Security Services:</strong> Continuous monitoring, threat detection, and rapid response to security incidents, ensuring 24/7 protection.
                     </li>
                     <li>
-                        <strong class="text-white">Security Awareness Training:</strong> Educating your employees on best practices to recognize and avoid phishing, malware, and social engineering attacks, turning them into your first line of defense.
+                        <strong class="">Security Awareness Training:</strong> Educating your employees on best practices to recognize and avoid phishing, malware, and social engineering attacks, turning them into your first line of defense.
                     </li>
                     <li>
-                        <strong class="text-white">Incident Response & Recovery:</strong> Expert assistance in responding to and recovering from cyberattacks, minimizing downtime and data loss.
+                        <strong class="">Incident Response & Recovery:</strong> Expert assistance in responding to and recovering from cyberattacks, minimizing downtime and data loss.
                     </li>
                     <li>
-                        <strong class="text-white">Compliance & Governance:</strong> Helping your business meet regulatory requirements (e.g., GDPR, HIPAA, PCI-DSS) and establish robust security policies.
+                        <strong class="">Compliance & Governance:</strong> Helping your business meet regulatory requirements (e.g., GDPR, HIPAA, PCI-DSS) and establish robust security policies.
                     </li>
                     <li>
-                        <strong class="text-white">Cloud Security:</strong> Securing your data and applications hosted in cloud environments (AWS, Azure, Google Cloud) against cloud-specific threats.
+                        <strong class="">Cloud Security:</strong> Securing your data and applications hosted in cloud environments (AWS, Azure, Google Cloud) against cloud-specific threats.
                     </li>
                     <li>
-                        <strong class="text-white">Endpoint Protection:</strong> Protecting all devices connected to your network—laptops, desktops, mobile phones—from malware and other threats.
+                        <strong class="">Endpoint Protection:</strong> Protecting all devices connected to your network—laptops, desktops, mobile phones—from malware and other threats.
                     </li>
                 </ul>
             </div>
