Preload hero background for better appearance

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Preload images for faster response on mouse hover for Our Services Section -->
+    <link rel="preload" as="image" href="Gallery/Gemini_Generated_Image_Hero_Background.png">
     <link rel="preload" as="image" href="Gallery/Gemini_Generated_Image_Web_Development.png">
     <link rel="preload" as="image" href="Gallery/Gemini_Generated_Image_Data_Analytics.png">
     <link rel="preload" as="image" href="Gallery/Gemini_Generated_Image_Cybersecurity.png">
