--- a/public_html/about-the-owner.html
+++ b/public_html/about-the-owner.html
@@ -11,11 +11,10 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="preload" as="image" href="Gallery/Gemini_Generated_Image_About_Us_Monitor.png">
+    <link rel="preload" as="image" href="Gallery/Gemini_Generated_Image_Hero_Background.webp">
     
     <script src="script.js" type="text/javascript"></script>
         
-    <!-- favicon -->
     <link rel="icon" type="image/png" href="Gallery/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="Gallery/favicon/favicon.svg" />
     <link rel="shortcut icon" href="Gallery/favicon/favicon.ico" />
